--- a/app/.env.local.example
+++ b/app/.env.local.example
@@ -6,4 +6,4 @@ NEXT_PUBLIC_PROVIDER_URI_SEPOLIA=
 # Get your project ID from WalletConnect Cloud https://cloud.walletconnect.com/
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
 
-ETHERSCAN_API_KEY="D5WJMUU7XU8CTJ2PMSWMCPI51QZ81TNEUR"
+ETHERSCAN_API_KEY=""
